--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 3
 <body>
 <h1>hello , world</h1>
+<img src="images/elsalvador . png" alt="Imagen de prueba" />
 <p>Call me Ishmael.</p>
 </body>
 </html>
